===========================================================================
2014-01-26

* R1A08

* Turned on corefiles with unlimited size in startscript 'redrobd.sh'.

* Fixed bug in 'redrobd_thread_utility.cpp', function
  redrobd_thread_finalize_cyclic(). Added check of final thread status.

* Modified check of battery voltage. LED_BAT_LOW is not latched on low
  voltage anymore. LED is turned off if battery voltage reaches above
  low limit again. This is to avoid "false" alarm because of voltage drop
  when running the motors.

* Added new parametern in configuration file 'redrobd.cfg'.
  Controls if full verbose logging shall be used (verbose=false,
  verbose=true). Steer codes are only logged when verbose=true.

===========================================================================

===========================================================================
2014-01-21

* R1A07

* Configuration:
  - Continuous / Non-continuos steering.
  - Daemon started by start script called from /etc/rc.local.

* HW platform updated.
  - Motor regulator L4940V5 (5V) removed and the battery voltage is now
    directly connected to L293D.
  - Installed main power on/off switch.
===========================================================================

===========================================================================
2014-01-20

* R1A07

* Configuration:
  - Continuous steering.
  - Daemon started by start script called from /etc/rc.local.

* HW platform and chassi assembled and ready for first integration with SW.
  - Motor control OK (left, right, forward, reverse).
  - Remote control (433 MHz) not functional on distances > 10 cm.
  - Motors are to weak do fully drive robot.
    There is an internal voltage drop in L293D when motor voltage
    is generated by separate regulator L4940V5 (5V).
  - Warning for low battery level (LED_BAT_LOW) generated when motors
    are running. This is a "false" alarm not reflecting the actual battery