@@ -1,4 +1,14 @@
 ===========================================================================
+2014-02-02
+
+* R1A09
+
+* Changed definition of buttons on RF-remote control (keyfob).
+  Remote control is now held differently after adding TX-antenna.
+
+===========================================================================
+
+===========================================================================
 2014-01-26
 
 * R1A08
